# go-test

./: BUILD.bazel  WORKSPACE  go.mod  go.sum  main.go
pkg/one/: BUILD.bazel  go.mod  main.go  main_test.go
pkg/one/main/: BUILD.bazel  go.mod
pkg/one/v2/: BUILD.bazel  WORKSPACE  go.mod  main.go
pkg/one/v3/: BUILD.bazel  go.mod
pkg/three/: BUILD.bazel  WORKSPACE  go.mod  main.go  main_test.go
pkg/three/main/: BUILD.bazel  WORKSPACE  go.mod  main.go  main_test.go
pkg/three/v3/: BUILD.bazel  WORKSPACE  go.mod  main.go
pkg/two/: BUILD.bazel  WORKSPACE  go.mod  main.go  main_test.go
pkg/two/main/: BUILD.bazel  WORKSPACE  go.mod  main.go
pkg/two/v3/: BUILD.bazel  WORKSPACE  go.mod  main.go  main_test.go
