load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/KSerrania/go-test
gazelle(name = "gazelle")

go_library(
    name = "go-test_lib",
    srcs = ["main.go"],
    importpath = "github.com/KSerrania/go-test",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/one",
        "//pkg/three",
        "//pkg/two",
    ],
)

go_binary(
    name = "go-test",
    embed = [":go-test_lib"],
    visibility = ["//visibility:public"],
)
