load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/KSerrania/go-test/pkg/one
gazelle(name = "gazelle")

go_library(
    name = "one",
    srcs = ["main.go"],
    importpath = "github.com/KSerrania/go-test/pkg/one",
    visibility = ["//visibility:public"],
)

go_test(
    name = "one_test",
    srcs = ["main_test.go"],
    embed = [":one"],
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
