load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/KSerrania/go-test/pkg/two/v3
gazelle(name = "gazelle")

go_library(
    name = "two",
    srcs = ["main.go"],
    importpath = "github.com/KSerrania/go-test/pkg/two/v3",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kserrania_go_test_pkg_one//:one"],
)

go_test(
    name = "two_test",
    srcs = ["main_test.go"],
    embed = [":two"],
    deps = ["@com_github_stretchr_testify//assert"],
)
